[project]
name = "htmx-sse-demo"
version = "0.1.0"
description = "HTMX SSE Demo Application"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "websockets==12.0",
    "pydantic==2.5.0",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"